--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/05_Shader&Mat/Shader/EnergeMat.mat
+Assets/12_Font/TextMat.mat
+Assets/05_Shader&Mat/ShaderMat/InventoryMat.mat
+Assets/00_ImportAsset/Hovl Studio/ScreenSpace/ScreenEffect.mat
